# willitcall

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  willitcall-result.json
crates/wic-core/: Cargo.toml
crates/wic-core/scenarios/: multi-turn-calendar-followup.toml  multi-turn-flight-booking.toml  multi-turn-inventory-order.toml  multi-turn-parallel-followup.toml  multi-turn-route.toml  multi-turn-ticket-update.toml  multi-turn-two-hop-chain.toml  negative-auto-arithmetic.toml  negative-auto-knowledge.toml  negative-greeting.toml  negative-invalid-schema.toml  negative-long-argument.toml  negative-plain-text.toml  negative-unicode-argument.toml  parallel-city-time.toml  parallel-different-tools.toml  parallel-three-cities.toml  parallel-three-different-tools.toml  parallel-two-calculations.toml  parallel-two-multiple-args.toml  parallel-two-searches.toml  parallel-weather-and-time.toml  single-array-tags.toml  single-boolean-flag.toml  single-date-range.toml  single-decimal-price.toml  single-empty-arguments.toml  single-enum-format.toml  single-integer-limit.toml  single-nested-options.toml  single-optional-omitted.toml  single-optional-present.toml  single-string-list.toml  single-weather.toml  single-zero-and-negative.toml  streaming-array-arguments.toml  streaming-boolean-argument.toml  streaming-empty-arguments.toml  streaming-enum-arguments.toml  streaming-nested-arguments.toml  (+10 more)
crates/wic-core/src/: client.rs  lib.rs  result.rs  runner.rs  score.rs
crates/wic-core/tests/: client.rs  corpus.rs  empty_response.rs  evidence.rs  mock_server.rs  scoring.rs
crates/wic-core/tests/fixtures/: chat-completion.json  chat-completion.sse  malformed-stream.sse  malformed-tool-call.json  stream-mid-argument.sse
crates/wic-core/tests/support/: mod.rs
crates/willitcall/: Cargo.toml
crates/willitcall/src/: main.rs  report.rs  site.rs
crates/willitcall/tests/: run_cli.rs  site_cli.rs
docs/: seed-plan.md
results/: llamacpp-granite3.1-dense-8b.json  (+31 more)
(+2476 files in other folders)
