[workspace]
members = ["crates/wic-core", "crates/willitcall"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
include_dir = "0.7"
jsonschema = { version = "0.48", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
tokio = { version = "1.46", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
toml = "0.9"

[workspace.lints.clippy]
all = "warn"
