[package]
name = "willitcall"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
wic-core = { path = "../wic-core" }

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true

[lints]
workspace = true
